--- a/src/main/resources/assets/portality/lang/en_US.lang
+++ b/src/main/resources/assets/portality/lang/en_US.lang
@@ -15,7 +15,7 @@ portality.display.private=Private
 portality.display.public=Public
 portality.display.dial=Click to dial the portal
 portality.display.dial_once=Shift+Click to dial once
-portality.display.force=Ctrl+Shift to force a dial
+portality.display.force=Ctrl+Shift+Click to force a dial
 portality.display.call_portal=Call portal
 portality.display.close_portal=Close Portal
 portality.display.change_name=Change Portal Name
