Reworked the mods visuals

--- a/src/main/resources/assets/portality/lang/en_US.lang
+++ b/src/main/resources/assets/portality/lang/en_US.lang
@@ -16,7 +16,7 @@ portality.display.public=Public
 portality.display.dial=Click to dial the portal
 portality.display.dial_once=Shift+Click to dial once
 portality.display.force=Ctrl+Shift+Click to force a dial
-portality.display.call_portal=Call portal
+portality.display.call_portal=Call Portal
 portality.display.close_portal=Close Portal
 portality.display.change_name=Change Portal Name
 portality.display.make_public=Make Portal Public
@@ -37,3 +37,4 @@ portality.gui.portals.next_page=Next Page
 portality.gui.portals.page=PAGE:
 module.type.output=Type: Output
 module.type.input=Type: Input
+portality.display.copy_to_clipboard=Copy portal ID to clipboard
