--- a/src/main/resources/assets/portality/lang/en_US.lang
+++ b/src/main/resources/assets/portality/lang/en_US.lang
@@ -7,7 +7,7 @@ tile.portality:module_items.name=Item Module
 tile.portality:module_fluids.name=Fluid Module
 tile.portality:module_energy.name=Energy Module
 
-portality.controller.error.size=ERROR: Portal needs to be 3 blocks deep!
+portality.controller.error.size=ERROR: Portal Structure Invalid!
 portality.controller.error.privacy=ERROR: This portal is private!
 portility.controller.info.icon_changed=Portal icon changed!
 
