--- a/src/main/resources/assets/portality/lang/en_us.json
+++ b/src/main/resources/assets/portality/lang/en_us.json
@@ -1,45 +1,45 @@
 {
   "itemGroup.portality": "Portality",
-  "block.portality.controller": "Portal Controller",
-  "block.portality.frame": "Portal Frame",
-  "block.portality.module_interdimensional": "Interdimensional Module",
-  "block.portality.module_items": "Item Module",
-  "block.portality.module_fluids": "Fluid Module",
-  "block.portality.module_energy": "Energy Module",
-  "block.portality.generator": "Low Efficiency Generator",
-  "portality.controller.error.size": "ERROR: Portal Structure Invalid!",
-  "portality.controller.error.privacy": "ERROR: This portal is private!",
-  "portility.controller.info.icon_changed": "Portal icon changed!",
-  "portality.display.private": "Private",
-  "portality.display.public": "Public",
-  "portality.display.dial": "Dial",
-  "portality.display.dial_once": "Dial Once",
-  "portality.display.force": "Force",
-  "portality.display.call_portal": "Call Portal",
-  "portality.display.close_portal": "Close Portal",
-  "portality.display.change_name": "Change Portal Name",
-  "portality.display.make_public": "Make Portal Public",
-  "portality.display.make_private": "Make Portal Private",
-  "portality.display.hide_name": "Hide Name Display",
-  "portality.display.show_name": "Show Name Display",
-  "portality.display.change_color": "Change Portal Color",
-  "portality.gui.controller": "Name:",
-  "portality.gui.controller.private": "Private:",
-  "portality.gui.controller.max_distance": "Max Distance:",
+  "block.portality.controller": "Controlador del portal",
+  "block.portality.frame": "Marco del portal",
+  "block.portality.module_interdimensional": "Modulos de Interdimensional",
+  "block.portality.module_items": "Modulo del Articulo",
+  "block.portality.module_fluids": "Modulo del Fluido",
+  "block.portality.module_energy": "Modulo del Energia",
+  "block.portality.generator": "Generador baja eficiencia",
+  "portality.controller.error.size": "¡Estructura del portal no válida!",
+  "portality.controller.error.privacy": "¡Este portal es privado!",
+  "portility.controller.info.icon_changed": "¡Icono del portal cambiado!!",
+  "portality.display.private": "Privido",
+  "portality.display.public": "Publico",
+  "portality.display.dial": "Marcar",
+  "portality.display.dial_once": "Marcar una vez.",
+  "portality.display.force": "Forzar",
+  "portality.display.call_portal": "Portal de llamades",
+  "portality.display.close_portal": "Portal de cerrar",
+  "portality.display.change_name": "Cambiar nombre portal.",
+  "portality.display.make_public": "Hacer público portal",
+  "portality.display.make_private": "Hacer que el portal sea privado",
+  "portality.display.hide_name": "Ocultar visualización de nombre",
+  "portality.display.show_name": "Mostrar visualización de nombre",
+  "portality.display.change_color": "Cambiar Color del Portal",
+  "portality.gui.controller": "Nombre:",
+  "portality.gui.controller.private": "Privido:",
+  "portality.gui.controller.max_distance": "Distancia maxima:",
   "portality.gui.controller.interdimensional": "Interdimensional:",
-  "portality.gui.controller.power": "Power:",
-  "portality.gui.controller.link": "Link:",
-  "portality.gui.controller.link_active": "Active",
-  "portality.gui.controller.link_missing": "Missing",
-  "portality.gui.controller.rename": "Rename",
-  "portality.gui.portals.previous_page": "Previous Page",
-  "portality.gui.portals.next_page": "Next Page",
-  "portality.gui.portals.page": "PAGE:",
-  "module.type.output": "Type: Output",
-  "module.type.input": "Type: Input",
-  "portality.display.copy_to_clipboard": "Copy portal ID to clipboard",
-  "portality.manual": "Portality Manual",
-  "portality.manual.category.basics": "Portal Basics",
-  "portality.manual.category.modules": "Portal Modules",
-  "tooltip.titanium.facing_handler.inventory": "Items"
+  "portality.gui.controller.power": "Poder:",
+  "portality.gui.controller.link": "Conectar:",
+  "portality.gui.controller.link_active": "Activito",
+  "portality.gui.controller.link_missing": "Perdido",
+  "portality.gui.controller.rename": "Nuevo nombre",
+  "portality.gui.portals.previous_page": "Página anterior",
+  "portality.gui.portals.next_page": "Página proxima",
+  "portality.gui.portals.page": "Pagina:",
+  "module.type.output": "Type: Salida",
+  "module.type.input": "Type: Entrar",
+  "portality.display.copy_to_clipboard": "Copiar ID del portal al portapapeles",
+  "portality.manual": "Manual del Portality",
+  "portality.manual.category.basics": "Basicos del Portal",
+  "portality.manual.category.modules": "Modulos del Portal",
+  "tooltip.titanium.facing_handler.inventory": "Artículos"
 }
