--- a/src/main/resources/assets/portality/lang/bg_bg.json
+++ b/src/main/resources/assets/portality/lang/bg_bg.json
@@ -36,7 +36,7 @@
   "portality.gui.portals.next_page": "Следваща Страница",
   "portality.gui.portals.page": "СТРАНИЦА:",
   "module.type.output": "Вид: Изход",
-  "module.type.input": "Вуд: Вход",
+  "module.type.input": "Вид: Вход",
   "portality.display.copy_to_clipboard": "Копирай порталния ИК към клипборда",
   "portality.manual": "Наръчник на Порталноста",
   "portality.manual.category.basics": "Основи на портала",
